Testdaten/src/main/java/thomas/nill/antlr4/script/scriptParser.java
// Generated from script.g4 by ANTLR 4.0

    package thomas.nill.antlr4.script;

import java.util.List;

import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.ParserRuleContext;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.TokenStream;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNSimulator;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class scriptParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__6=1, T__5=2, T__4=3, T__3=4, T__2=5, T__1=6, T__0=7, TEXT=8, OTHERS=9, 
		WS=10;
	public static final String[] tokenNames = {
		"<INVALID>", "'('", "')'", "'{'", "'['", "'|'", "'}'", "']'", "TEXT", 
		"OTHERS", "WS"
	};
	public static final int
		RULE_script = 0, RULE_sentence = 1, RULE_normalSentence = 2, RULE_constructorCall = 3, 
		RULE_constructorArgs = 4, RULE_listsentence = 5, RULE_gsentence = 6, RULE_textsentence = 7, 
		RULE_rsentence = 8;
	public static final String[] ruleNames = {
		"script", "sentence", "normalSentence", "constructorCall", "constructorArgs", 
		"listsentence", "gsentence", "textsentence", "rsentence"
	};

	@Override
	public String getGrammarFileName() { return "script.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public scriptParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ScriptContext extends ParserRuleContext {
		public List<SentenceContext> sentence() {
			return getRuleContexts(SentenceContext.class);
		}
		public SentenceContext sentence(int i) {
			return getRuleContext(SentenceContext.class,i);
		}
		public ScriptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_script; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof scriptListener ) ((scriptListener)listener).enterScript(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof scriptListener ) ((scriptListener)listener).exitScript(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof scriptVisitor ) return ((scriptVisitor<? extends T>)visitor).visitScript(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ScriptContext script() throws RecognitionException {
		ScriptContext _localctx = new ScriptContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_script);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(18); sentence();
			setState(23);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==5) {
				{
				{
				setState(19); match(5);
				setState(20); sentence();
				}
				}
				setState(25);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentenceContext extends ParserRuleContext {
		public NormalSentenceContext normalSentence() {
			return getRuleContext(NormalSentenceContext.class,0);
		}
		public List<TerminalNode> OTHERS() { return getTokens(scriptParser.OTHERS); }
		public TerminalNode OTHERS(int i) {
			return getToken(scriptParser.OTHERS, i);
		}
		public ConstructorCallContext constructorCall() {
			return getRuleContext(ConstructorCallContext.class,0);
		}
		public SentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof scriptListener ) ((scriptListener)listener).enterSentence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof scriptListener ) ((scriptListener)listener).exitSentence(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof scriptVisitor ) return ((scriptVisitor<? extends T>)visitor).visitSentence(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentenceContext sentence() throws RecognitionException {
		SentenceContext _localctx = new SentenceContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sentence);
		int _la;
		try {
			setState(34);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(26); constructorCall();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(28);
				_la = _input.LA(1);
				if (_la==OTHERS) {
					{
					setState(27); match(OTHERS);
					}
				}

				setState(30); normalSentence();
				setState(32);
				switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
				case 1:
					{
					setState(31); match(OTHERS);
					}
					break;
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NormalSentenceContext extends ParserRuleContext {
		public ListsentenceContext listsentence() {
			return getRuleContext(ListsentenceContext.class,0);
		}
		public GsentenceContext gsentence() {
			return getRuleContext(GsentenceContext.class,0);
		}
		public RsentenceContext rsentence() {
			return getRuleContext(RsentenceContext.class,0);
		}
		public TextsentenceContext textsentence() {
			return getRuleContext(TextsentenceContext.class,0);
		}
		public NormalSentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_normalSentence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof scriptListener ) ((scriptListener)listener).enterNormalSentence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof scriptListener ) ((scriptListener)listener).exitNormalSentence(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof scriptVisitor ) return ((scriptVisitor<? extends T>)visitor).visitNormalSentence(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NormalSentenceContext normalSentence() throws RecognitionException {
		NormalSentenceContext _localctx = new NormalSentenceContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_normalSentence);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(39);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(36); gsentence();
				}
				break;

			case 2:
				{
				setState(37); rsentence();
				}
				break;

			case 3:
				{
				setState(38); textsentence();
				}
				break;
			}
			setState(41); listsentence();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstructorCallContext extends ParserRuleContext {
		public ConstructorArgsContext constructorArgs() {
			return getRuleContext(ConstructorArgsContext.class,0);
		}
		public TerminalNode TEXT() { return getToken(scriptParser.TEXT, 0); }
		public ConstructorCallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constructorCall; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof scriptListener ) ((scriptListener)listener).enterConstructorCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof scriptListener ) ((scriptListener)listener).exitConstructorCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof scriptVisitor ) return ((scriptVisitor<? extends T>)visitor).visitConstructorCall(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstructorCallContext constructorCall() throws RecognitionException {
		ConstructorCallContext _localctx = new ConstructorCallContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_constructorCall);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43); match(TEXT);
			setState(44); constructorArgs();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstructorArgsContext extends ParserRuleContext {
		public List<TerminalNode> OTHERS() { return getTokens(scriptParser.OTHERS); }
		public TerminalNode OTHERS(int i) {
			return getToken(scriptParser.OTHERS, i);
		}
		public TerminalNode TEXT(int i) {
			return getToken(scriptParser.TEXT, i);
		}
		public List<TerminalNode> TEXT() { return getTokens(scriptParser.TEXT); }
		public ConstructorArgsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constructorArgs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof scriptListener ) ((scriptListener)listener).enterConstructorArgs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof scriptListener ) ((scriptListener)listener).exitConstructorArgs(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof scriptVisitor ) return ((scriptVisitor<? extends T>)visitor).visitConstructorArgs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstructorArgsContext constructorArgs() throws RecognitionException {
		ConstructorArgsContext _localctx = new ConstructorArgsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_constructorArgs);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46); match(4);
			setState(53);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TEXT) {
				{
				{
				setState(47); match(TEXT);
				setState(49);
				_la = _input.LA(1);
				if (_la==OTHERS) {
					{
					setState(48); match(OTHERS);
					}
				}

				}
				}
				setState(55);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(56); match(7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListsentenceContext extends ParserRuleContext {
		public List<SentenceContext> sentence() {
			return getRuleContexts(SentenceContext.class);
		}
		public SentenceContext sentence(int i) {
			return getRuleContext(SentenceContext.class,i);
		}
		public ListsentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listsentence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof scriptListener ) ((scriptListener)listener).enterListsentence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof scriptListener ) ((scriptListener)listener).exitListsentence(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof scriptVisitor ) return ((scriptVisitor<? extends T>)visitor).visitListsentence(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListsentenceContext listsentence() throws RecognitionException {
		ListsentenceContext _localctx = new ListsentenceContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_listsentence);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(58); sentence();
					}
					} 
				}
				setState(63);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GsentenceContext extends ParserRuleContext {
		public SentenceContext sentence() {
			return getRuleContext(SentenceContext.class,0);
		}
		public GsentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_gsentence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof scriptListener ) ((scriptListener)listener).enterGsentence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof scriptListener ) ((scriptListener)listener).exitGsentence(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof scriptVisitor ) return ((scriptVisitor<? extends T>)visitor).visitGsentence(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GsentenceContext gsentence() throws RecognitionException {
		GsentenceContext _localctx = new GsentenceContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_gsentence);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64); match(3);
			setState(65); sentence();
			setState(66); match(6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TextsentenceContext extends ParserRuleContext {
		public TerminalNode TEXT() { return getToken(scriptParser.TEXT, 0); }
		public TextsentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_textsentence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof scriptListener ) ((scriptListener)listener).enterTextsentence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof scriptListener ) ((scriptListener)listener).exitTextsentence(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof scriptVisitor ) return ((scriptVisitor<? extends T>)visitor).visitTextsentence(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TextsentenceContext textsentence() throws RecognitionException {
		TextsentenceContext _localctx = new TextsentenceContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_textsentence);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68); match(TEXT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RsentenceContext extends ParserRuleContext {
		public SentenceContext sentence() {
			return getRuleContext(SentenceContext.class,0);
		}
		public TerminalNode OTHERS() { return getToken(scriptParser.OTHERS, 0); }
		public TerminalNode TEXT() { return getToken(scriptParser.TEXT, 0); }
		public RsentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rsentence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof scriptListener ) ((scriptListener)listener).enterRsentence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof scriptListener ) ((scriptListener)listener).exitRsentence(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof scriptVisitor ) return ((scriptVisitor<? extends T>)visitor).visitRsentence(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RsentenceContext rsentence() throws RecognitionException {
		RsentenceContext _localctx = new RsentenceContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_rsentence);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70); match(TEXT);
			setState(72);
			_la = _input.LA(1);
			if (_la==OTHERS) {
				{
				setState(71); match(OTHERS);
				}
			}

			setState(74); match(1);
			setState(75); sentence();
			setState(76); match(2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		ATNSimulator.deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
	}
}